added possibility to get posts and feeds of another user
